--- a/stiluslap.css
+++ b/stiluslap.css
@@ -4,7 +4,14 @@
   margin: 0;
 }
 
-table, tr, td, th {
+table,
+tr,
+td,
+th {
   border-collapse: collapse;
   /*border: 1px double black;*/
+}
+
+.elrejt {
+  display: none;
 }
